<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjetGroupe2</string>
    <string name="hello_world">Bienvenue!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="title_activity_creer_tache">Créer Tâche</string>
    <string name="titre">Titre : </string>
    <string name="description">Description : </string>
    <string name="date">Date : </string>
    <string name="numero_ordre">Ordre : </string>
    <string name="depanneur">Dépanneur : </string>
    <string name="ajouter">Ajouter</string>
    <string name="reset">Vider les champs</string>
    <string name="connexion">Connexion</string>
    <string name="loginLB">Login :</string>
    <string name="PasswordLB">Mot de passe :</string>
    <string name="title_activity_afficher_tache">Afficher Tache</string>
    <string name="title_activity_menu_depanneur">Menu Depanneur</string>
    <string name="AffTache">Afficher tâches</string>
    <string name="Deco">Deconnexion</string>
    <string name="title_activity_menu_admin">Menu Admin</string>
    <string name="AffTacheStaff">Afficher tâches staff</string>
    <string name="CreerTache">Créer tâche</string>

</resources>
